--- a/CodeQueen.html
+++ b/CodeQueen.html
@@ -4,13 +4,44 @@
         <title> CODEQUEEN</title>
     </head>
     <body>
-        <h1>hello world</h1>
-        <h2>my first code</h2>
+        <header>
+            <nav>
+                <a href="">Home</a> 
+                <a href="">About</a> 
+                <a href="">Contact</a> 
+            </nav>                
+        </header>
+        <h1>Hello world</h1>
+        <h2>My first code</h2>
         <h3>Wednesday 4 March 2020</h3>
-        <p>am excited for my class</p>
-        
+        <section>
+            <p>Learning the basics of HTML</p>
+            <ul>
+                <li>Structure</li>
+                <li>Document type declaration</li>
+                <li> Elements represented by tags</li>
+            </ul>
+            <p>We learnt about different element tags;</p>
+            <ol>
+                <li>Paragraph</li>
+                <li>Section</li>
+                <li>Head tag</li>
+            </ol>
+            <p>.....and so much more</p>
+        </section>
+        <p>I'm excited for my class</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSaGDgdGNVcgdTiQCBE1GqDHSNSkIqdeiSeMIVXBhmoaVoa_F55">
+        <section>
+            <h2>My progress bar</h2>
+            <p>
+                The progress you will make<br>
+                When you understand HTML5 Code<progress max="100" value="30"></progress><br>
+                When you understand CSS3 Code<progress max="100" value="50"></progress><br>
+                When you understand Javascript Code<progress max="100" value="80"></progress><br>
+                When you understand HTML5+CSS3+Javascript Code<progress max="100" value="100"></progress>
+            </p>
+            <mark>This page does not include any CSS styling</mark>
+        </section>
     </body>
-
-
 
 </html>
